--- a/src/styles/components/InformasiSection.css
+++ b/src/styles/components/InformasiSection.css
@@ -1,7 +1,7 @@
 .informasi-section {
     padding-top: 4rem;
     padding-bottom: 4rem;
-    background-color: white;
+    background-color: #f9fafb;
 }
 
 .container {
